# brainrot

./: .gitignore  README.md  pyproject.toml
brainrot/: main.py  reddit_scraper.py  video.py
brainrot/static/: styles.css
brainrot/templates/: index.html  video_creation.html
brainrot/videos/: video.py
