[tool.poetry]
name = "brainrot"
version = "0.1.0"
description = ""
authors = ["Brandon <bladner0717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
praw = "^7.7.1"
moviepy = "^1.0.3"
gtts = "^2.5.1"
pydub = "^0.25.1"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
assemblyai = "^0.26.0"
pysrt = "^1.1.2"
pillow = "9.5.0"
better-profanity = "^0.7.0"
elevenlabs = "^1.1.2"


[tool.poetry.scripts]
video = "brainrot.video:get_video"
brainrot = "brainrot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
